--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <!-- Titulo do cabeçalho. Acima o ID header faz com que no CSS eu possa chamar este elemento pelo id, caso não especifique o id, ao mecher no CSS, todo header no html será modificado -->
       <!-- a classe show é integrada ao java script, ela irá fazer o menu aparecer quando clicado-->
       <nav class="container">
-        <!-- nav é uma tag para navegação, indica que os elementos aqui dentro receberam cliques para navegar no site. A class indica que esta TAG possui a classe determinada, no CSS posso chamar tudo que for de uma classe determinada. É possível ver que a tag <span> esta aninhada dentro da tag a, ela separa a palavra beautysalon para podermos modificar apenas parte da palavra se desejarmos-->
-        <a class="logo" ref="#">Beauty<span>salon</span>.</a>
+        <!-- naaav é uma tag para navegação, indica que os elementos aqui dentro receberam cliques para navegar no site. A class indica que esta TAG possui a classe determinada, no CSS posso chamar tudo que for de uma classe determinada. É possível ver que a tag <span> esta aninhada dentro da tag a, ela separa a palavra beautysalon para podermos modificar apenas parte da palavra se desejarmos-->
+        <a class="logo" ref="#home">Beauty<span>salon</span>.</a>
         <!-- Estou criando uma nova TAG dentro da tag div abaixo para dar itens ao menu, dessa forma, li são tags para as categorias. cada li recebera a tag "a"que é a tag que usamos para click. Para escrever de forma facilitada, em vez de digitar cada li podemos usar li*5>a que irá criar 5 li com a. também poderia ser ul>li*5>a caso não tivesse já escrito a tag ul. Além disso, caso eu precise escrever varios codigos iguais posso segurar CTRL e clicar em cada linha que recberá esse código, ao escrever, será escrito em todas as linhas-->
         <div class="menu">
           <!-- Menu -->
@@ -53,7 +53,7 @@
           <!-- Tag para adicionar uma imagem da web (usamos o link da imagem). Essa tag não fecha no final, é própria desta forma, pois só tem atributos, o source = src, e alt (o que é a imagem)-->
           <div class="image">
             <img
-              src="https://media.istockphoto.com/photos/barber-using-scissors-and-comb-picture-id640274128?b=1&k=20&m=640274128&s=170667a&w=0&h=SDQlyOIjIepH82icolK_6jTV3T_uQ3xUG9w6qft5mYI="
+              src="https://media.istockphoto.com/photos/female-hairdresser-standing-in-salon-picture-id853924196?k=20&m=853924196&s=612x612&w=0&h=EnR9LSau_Tn77Ed1bUICw0ChyyvUUvqoumoFg66zkGk="
               alt="descricao da imagem aqui"
             />
           </div>
@@ -181,9 +181,26 @@
           </div>
         </div>
       </section>
-      </section>
     </main>
-    <footer></footer>
+    <!--Rodapé-->
+    <footer class="section">
+      <div class="container grid">
+        <div class="brand">
+          <a class="logo" href="#home">Beauty<span>salon</span>.</a>
+          <p>2001 Beatysalon.</p>
+          <p>Todos os direitos reservados</p>
+        </div>
+        <div class="social">
+        <a href="https://instagram.com" target= "_blank"><i class="icon-instagram"></i></a>
+        <a href="https://youtube.com" target="_blank"><i class="icon-youtube"></i></a>
+        <a href="https://facebook.com" target="_blank"><i class="icon-facebook"></i></a>
+        </div> 
+      </div>
+      <a href="#home" class="back-to-top">^</a>
+    </footer>
+    <!--Botão de voltar ao topo-->
+    
+
     <!-- Aqui fazemos a ligação com o Javascript, antes de fechar o corpo. O js irá nos dar as funcionalidades de click da pagina. Antes do main.js devo usar qualquer link de modificações (como o swiper) para que seja incluido no meu js-->
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="main.js"></script>
