--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <section class="section" id="services">
         <div class="container grid">
           <header><h2 class="title">Serviços</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum tempora debitis ducimus reprehenderit dolore pariatur asperiores expedita. Corporis reiciendis ad atque id, saepe aut officia blanditiis neque, repudiandae laudantium officiis?</p></header>
+          <p class="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum tempora debitis ducimus reprehenderit dolore pariatur asperiores expedita. Corporis reiciendis ad atque id, saepe aut officia blanditiis neque, repudiandae laudantium officiis?</p></header>
           <div class="cards grid">
             <div class="card">
               <i class="icon-woman-hair"></i>
