--- a/atividade.html
+++ b/atividade.html
@@ -8,48 +8,54 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="div_do_header">
-      <header class="grid">
-        <h1>Logo</h1>
-        <div id="menu">
-          <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Services</li>
-            <li>Testimonials</li>
-            <button><a href="">Contact</a></button>
-          </ul>
-        </div>
-      </header>
+    <div id="body" class="">
+      <div id="div_do_header">
+        <header class="grid">
+          <h1>Logo</h1>
+          <div id="menu">
+            <ul>
+              <li>Home</li>
+              <li>About</li>
+              <li>Services</li>
+              <li>Testimonials</li>
+              <button id="open-modal">Contact</button>
+            </ul>
+          </div>
+        </header>
+      </div>
+      <main>
+        <section>
+          <div id="div1">Conteúdo 1</div>
+          <div id="div2">Conteúdo 2</div>
+        </section>
+        <section>
+          <div>
+            <ul>
+              <li><img src="https://source.unsplash.com/random?" alt="" /></li>
+              <li><img src="https://source.unsplash.com/random?" alt="" /></li>
+              <li><img src="https://source.unsplash.com/random?" alt="" /></li>
+            </ul>
+          </div>
+          <div>
+            <ul>
+              <li><img src="https://source.unsplash.com/random?" alt="" /></li>
+              <li><img src="https://source.unsplash.com/random?" alt="" /></li>
+              <li><img src="https://source.unsplash.com/random?" alt="" /></li>
+            </ul>
+          </div>
+          <div>
+            <ul>
+              <li><img src="https://source.unsplash.com/random?" alt="" /></li>
+              <li><img src="https://source.unsplash.com/random?" alt="" /></li>
+              <li><img src="https://source.unsplash.com/random?" alt="" /></li>
+            </ul>
+          </div>
+        </section>
+      </main>
     </div>
-    <main>
-      <section>
-        <div id="div1">Conteúdo 1</div>
-        <div id="div2">Conteúdo 2</div>
-      </section>
-      <section>
-        <div>
-          <ul>
-            <li><img src="https://source.unsplash.com/random?" alt="" /></li>
-            <li><img src="https://source.unsplash.com/random?" alt="" /></li>
-            <li><img src="https://source.unsplash.com/random?" alt="" /></li>
-          </ul>
-        </div>
-        <div>
-          <ul>
-            <li><img src="https://source.unsplash.com/random?" alt="" /></li>
-            <li><img src="https://source.unsplash.com/random?" alt="" /></li>
-            <li><img src="https://source.unsplash.com/random?" alt="" /></li>
-          </ul>
-        </div>
-        <div>
-          <ul>
-            <li><img src="https://source.unsplash.com/random?" alt="" /></li>
-            <li><img src="https://source.unsplash.com/random?" alt="" /></li>
-            <li><img src="https://source.unsplash.com/random?" alt="" /></li>
-          </ul>
-        </div>
-      </section>
-    </main>
+    <div id="modal-wraper" class="modal-wrapper invisible">
+      <div class="esc">Tecle ESC para sair</div>
+    </div>
+    <script src="atividade.js"></script>
   </body>
 </html>
